6) Positionin 7)Floating_Elements / issue of parent collapsing // clear float fixg 8)FlexBox

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,44 @@
+.container {
+  border: 3px solid lightgray;
+  display: flex;
+
+  flex-direction: column;
+  flex-direction: column-reverse;
+  flex-direction: row;
+  flex-direction: row-reverse;
+  flex-direction: row;
+
+  justify-content: flex-start;
+  justify-content: flex-end;
+  justify-content: space-between;
+  justify-content: space-around;
+  justify-content: center;
+
+  height: 90vh;
+
+  align-items: flex-end;
+  align-items: baseline;
+  align-items: flex-start;
+  align-items: center;
+
+  /* flex-wrap: nowrap;
+  flex-wrap: wrap;
+  align-content: center; */
+}
+
 .box {
-  width: 100px;
-  height: 100px;
+  width: 5rem;
+  height: 5rem;
+  background: gold;
+  margin: 1rem;
+  /* flex-grow: 1; */
+  flex-basis: 15rem;
+  flex-shrink: 1;
 }
 
 .box-one {
-  background: red;
-  z-index: 2;
-  position: relative;
-}
-
-.box-two {
-  background: yellow;
-  position: relative;
-  left: 30px;
-  bottom: 20px;
-  z-index: 1;
-}
-
-.box-three {
-  background: green;
+  /* align-self: flex-end; */
+  /* flex-basis: 10rem; */
+  /* flex-grow: 2; */
+  flex-shrink: 0;
 }
